// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LockedIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LockedIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M11 7.05V6.5C11 4.566 9.434 3 7.5 3S4 4.566 4 6.5v.55c-.566.12-1 .598-1 1.2v4.5c0 .69.56 1.25 1.25 1.25h6.5c.69 0 1.25-.56 1.25-1.25v-4.5c0-.602-.434-1.08-1-1.2zM7.5 4.703c.99 0 1.798.807 1.798 1.798V7H5.702v-.5c0-.99.807-1.798 1.798-1.798z"
  />
</Icon>
`;

exports[`LockedIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LockedIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M11 7.05V6.5C11 4.566 9.434 3 7.5 3S4 4.566 4 6.5v.55c-.566.12-1 .598-1 1.2v4.5c0 .69.56 1.25 1.25 1.25h6.5c.69 0 1.25-.56 1.25-1.25v-4.5c0-.602-.434-1.08-1-1.2zM7.5 4.703c.99 0 1.798.807 1.798 1.798V7H5.702v-.5c0-.99.807-1.798 1.798-1.798z"
  />
</Icon>
`;

exports[`LockedIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LockedIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M11 7.05V6.5C11 4.566 9.434 3 7.5 3S4 4.566 4 6.5v.55c-.566.12-1 .598-1 1.2v4.5c0 .69.56 1.25 1.25 1.25h6.5c.69 0 1.25-.56 1.25-1.25v-4.5c0-.602-.434-1.08-1-1.2zM7.5 4.703c.99 0 1.798.807 1.798 1.798V7H5.702v-.5c0-.99.807-1.798 1.798-1.798z"
  />
</Icon>
`;
